[tool.poetry]
name = "fpg-curso"
version = "0.1.0"
description = ""
authors = ["olv-leo <olv.leo@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.49"
mkdocs-quiz = "^0.0.41"
mkdocs-macros-plugin = "^1.3.7"
mkdocs-video = "^1.5.0"
pymdown-extensions = "^10.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
